1、添加需求/bug发布信息拷贝功能 2、去除不需要验收的需求在“已测试待验收”状态时的钉钉通知 3、添加通知需要at的用户信息从服务端获取

--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,8 @@
     "notifications",
  	  "background",
 	  "webRequest",
+    "tabs",
+    "storage",
     "http://*/*",
     "https://*/*"
   ],
@@ -18,6 +20,15 @@
     "scripts": [
       "js/background.js"
     ]
+  },
+  "commands":{
+    "release-copy":{
+      "suggested_key":{
+        "default":"Alt+S",
+        "mac":"MacCtrl+S"
+      },
+      "description":"release copy"
+    }
   },
   "manifest_version": 2,
   "content_scripts": [
