--- a/manifest.json
+++ b/manifest.json
@@ -38,7 +38,7 @@
       ],
       "js": [
         "js/jquery-3.5.1.min.js",
-        "js/myscript.js"
+        "js/content.js"
       ]
     }
   ],
